# gdyn-legged-locomotion

./: .travis.yml  CHANGELOG.rst  README.md  install_ros_kinetic.sh  install_ros_melodic.sh  run_hyq
legged_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
legged_controllers/include/: Leg_State_Command.h
legged_controllers/include/legged_controllers/: balance_controller.h  leg_controller.h  main_controller.h  mpc_controller.h  swing_controller.h  virtaul_spring_damper_controller.h  virtual_spring_damper_controller.h
legged_controllers/include/legged_robot/: body.h  leg.h  legged_robot.h  quadruped_robot.h
legged_controllers/include/trajectory/: bezier.h  min_jerk.h
legged_controllers/include/utility/: math_func.h
legged_controllers/msg/: ControllerJointState.msg  UIState.msg
legged_controllers/src/: Leg_State_Command.cpp  balance_controller.cpp  leg_controller.cpp  leg_controller.h  main_controller.cpp  mpc_controller.cpp  swing_controller.cpp  virtual_spring_damper_controller.cpp
legged_controllers/src/legged_robot/: body.cpp  leg.cpp  legged_robot.cpp  quadruped_robot.cpp
legged_controllers/src/trajectory/: bezier.cpp  min_jerk.cpp
legged_controllers/src/utility/: math_func.cpp
legged_controllers/srv/: MoveBody.srv  UICommand.srv
legged_gazebo_ui/: CMakeLists.txt  package.xml
legged_gazebo_ui/src/: LeggedGazeboUI.cpp  LeggedGazeboUI.h
legged_robot/: CMakeLists.txt  package.xml
legged_robot_controller/: CMakeLists.txt  package.xml
legged_robot_controller/include/legged_robot_controller/: balance_controller.h  main_controller.h  motion_planner.h  mpc_controller.h  quadruped_robot.h  swing_controller.h  virtual_spring_damper_controller.h
legged_robot_controller/plugin/: controller_plugins.xml
legged_robot_controller/src/: balance_controller.cpp  main_controller.cpp  motion_planner.cpp  mpc_controller.cpp  quadruped_robot.cpp  swing_controller.cpp  virtual_spring_damper_controller.cpp
legged_robot_dependencies/qpOASES/: CMakeLists.txt  README.md  package.xml  setup.py
legged_robot_dependencies/qpOASES/examples/: example1.cpp  example1a.cpp  example1b.cpp  example2.cpp  example3.cpp  example3b.cpp  example4.cpp  example5.cpp  exampleLP.cpp  qrecipe.cpp
legged_robot_dependencies/qpOASES/interfaces/python/: qpoases.cpp  qpoases.pxd
legged_robot_dependencies/qpOASES/interfaces/scilab/: qpOASESroutines.cpp
legged_robot_dependencies/sensors_description/: CMakeLists.txt  package.xml
legged_robot_dependencies/sensors_description/launch/: asus_xtion.launch  asus_xtion_hires.launch
legged_robot_dependencies/sensors_description/meshes/sensors/: asus_xtion.dae  bumblebee.dae  vislab_3dve.stl
legged_robot_dependencies/sensors_description/urdfs/sensors/: kinect.gazebo.xacro  kvh_1775_imu.urdf.xacro  microstrain_3dmgx325_imu.urdf.xacro  microstrain_3dmgx425_imu.urdf.xacro  multisense_sl.gazebo.xacro  multisense_sl.urdf.xacro  ptu_d46.transmission.xacro  ptu_d46.urdf.xacro  velodyne.gazebo.xacro
legged_robot_description/: CMakeLists.txt  package.xml
legged_robot_description/launch/: hyq_upload.launch  hyq_view.launch
legged_robot_description/rviz/: legged_robot.rviz
legged_robot_description/urdf/biped/: biped.urdf
legged_robot_description/urdf/hyq/: common.xacro  hyq.gazebo.xacro  hyq.urdf.xacro  leg.gazebo.xacro  leg.urdf.xacro  trunk.gazebo.xacro  trunk.urdf.xacro
legged_robot_description/urdf/hyq_fixed/: common.xacro  hyq.urdf.xacro  leg.urdf.xacro  trunk.urdf.xacro
legged_robot_description/urdf/laikago/: laikago.urdf
legged_robot_description/urdf/monoped/: monoped.urdf  monoped_controlled.urdf
legged_robot_description/urdf/opendog/: EnvOpenDogStand.py  es.py  hip.stl  trainEnvWithES.py  trainEnvWithPPO.py
legged_robot_gazebo/: CMakeLists.txt  package.xml
legged_robot_gazebo/config/: hyq_controller.yaml
legged_robot_gazebo/launch/: hyq_controller.launch  run_hyq.launch  run_hyq_fixed.launch  run_laikago.launch  run_mini_cheetah.launch  run_monoped.launch  run_opendog.launch  spawn_hyq.launch  spawn_hyq_fixed.launch  spawn_laikago.launch  spawn_mini_cheetah.launch  spawn_monoped.launch  spawn_opendog.launch  world.launch
legged_robot_gazebo/worlds/: low_gravity.world  simple.world
legged_robot_gui/: CMakeLists.txt  package.xml
legged_robot_gui/include/legged_robot_gui/: main_window.hpp  qnode.hpp
legged_robot_gui/launch/: legged_robot_gui.launch
legged_robot_gui/src/: main.cpp  main_window.cpp  qnode.cpp
legged_robot_gui/ui/: main_window.ui
legged_robot_math/: CMakeLists.txt  package.xml
legged_robot_math/include/legged_robot_math/: bezier.h  math_func.h  min_jerk.h
legged_robot_math/src/: math_func.cpp  min_jerk.cpp
legged_robot_msgs/: CMakeLists.txt  package.xml
legged_robot_msgs/msg/: BalanceQPState.msg  ControllerJointState.msg  UIState.msg
legged_robot_msgs/srv/: MoveBody.srv  UICommand.srv
legged_robot_teleop/: CMakeLists.txt  package.xml
legged_robot_teleop/include/legged_robot_teleop/: legged_robot_teleop_joystick.h  legged_robot_teleop_keyboard.h
legged_robot_teleop/src/: legged_robot_teleop_joystick.cpp  legged_robot_teleop_keyboard.cpp
legged_robots/legged_robots_control/: CMakeLists.txt  package.xml
legged_robots/legged_robots_description/: CMakeLists.txt  package.xml
legged_robots/legged_robots_sims/: package.xml
legged_robots/sensors-description/: .gitlab-ci.yml  mainpage.dox  package.xml
legged_robots/sensors-description/include/sensors_description/: MultiSenseSLPlugin.h
legged_robots/sensors-description/meshes/sensors/: velodyne_hdl32e.dae  velodyne_lidar_hdl32e.stl
legged_robots/sensors-description/src/: MultiSenseSLPlugin.cpp
legged_robots/sensors-description/urdfs/sensors/: asus_xtion.gazebo.xacro  asus_xtion.urdf.xacro  bumblebee.urdf.xacro  hokuyo_laser.gazebo.xacro  hokuyo_laser.urdf.xacro  imu.gazebo.xacro  kinect.urdf.xacro  velodyne.urdf.xacro  vicon.urdf.xacro  vislab_3dve.urdf.xacro
legged_robots_sims/: CMakeLists.txt
legged_robots_sims/launch/: run_hyq.launch  run_laikago.launch  run_mini_cheetah.launch  run_monoped.launch  (+4 more)
(+48 files in other folders)
