<?xml version="1.0"?>
<package format="2">
  <name>legged_gazebo_ui</name>
  <version>0.0.1</version>
  <description>Gazebo UI for legged controller</description>

  <maintainer email="kyungmin5257@gmail.com">kyungmin</maintainer>
  <maintainer email="kjy880527@gmail.com">Jungyeong Kim</maintainer>
  <maintainer email="babchol@gmail.com">Hancheol Choi</maintainer>
  <maintainer email="scleewa@naver.com">SeungChan Lee</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>legged_controllers</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>legged_controllers</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>